Add membership badges

--- a/scripts/templates/park-page.html
+++ b/scripts/templates/park-page.html
@@ -32,12 +32,13 @@
                 <h1 class="display-5 fw-bold" style="color: %HEX_COLOR%;">%PARK_NAME% National Park</h1>
                 <div class="row">
                     <div class="col-md-9">
+                        <span class="fs-5" style="font-weight: bold;">
+                            %MEMBERSHIPS%
+                        </span>
                         <p class="fs-4">%PARK_DESC%</p>
                         <a href="%PARK_URL%" target="blank" class="btn btn-lg btn-primary">Park Website <i class="fas fa-external-link-alt"></i></a>
                     </div>
-                    <div class="col-md-3">
-<!--                        <img src="%HEADER_IMAGE%" width="250px" class="img-fluid icon mt-2" />-->
-                    </div>
+                    <div class="col-md-3"></div>
                 </div>
             </div>
         </div>
