--- a/scripts/templates/park-page.html
+++ b/scripts/templates/park-page.html
@@ -32,7 +32,7 @@
                 <h1 class="display-5 fw-bold" style="color: %HEX_COLOR%;">%PARK_NAME% National Park</h1>
                 <div class="row">
                     <div class="col-md-9">
-                        <span class="fs-5" style="font-weight: bold;">
+                        <span class="fs-5" style="font-weight: bold; padding-bottom: 10px;">
                             %MEMBERSHIPS%
                         </span>
                         <p class="fs-4">%PARK_DESC%</p>
